--- a/messaging_app/docker-compose.yml
+++ b/messaging_app/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     env_file:
       - .env
     command: >
-      python manage.py runserver 0.0.0.0:8000
+      python3 manage.py runserver 0.0.0.0:8000
 
   db:
     image: mysql:8
